<resources>
    <string name="app_name">KODE_HOMEWORK_RECYCLER</string>

    <string name="java">объектно-ориентированный, структурный, императивный, компонентно-ориентированный, обобщённый, рефлективный, функциональный</string>

    <string name="c">процедурный</string>

    <string name="python">объектно-ориентированный, рефлективный, императивный, функциональный, аспектно-ориентированный, динамический</string>

    <string name="cpp">объектно-ориентированный, обобщённый, процедурный </string>

    <string name="basic">	процедурный, объектно-ориентированный, компонентно-ориентированный, событийно-ориентированный</string>

    <string name="javascript">объектно-ориентированный, обобщённый, функциональный, императивный, аспектно-ориентированный, событийно-ориентированный</string>

    <string name="c_sharp">объектно-ориентированный, обобщённый, процедурный, функциональный, событийный, рефлективный</string>

    <string name="php">	сценарный, процедурный, объектно-ориентированный</string>

    <string name="sql">процедурный</string>

    <string name="objective_c">объектно-ориентированный, рефлексивно-ориентированный</string>


    <string name="filter">Фильтр</string>
    <string name="all">Все</string>

    <string name="only_object">Объектно-ориентированные</string>
    <string name="only_process">Процедурные</string>
    <string name="only_fun">Функциональные</string>
    <string name="only_struct">Структурные</string>
    <string name="only_component">Компонентно-ориентрированные</string>
    <string name="only_obob">Обобщенные</string>
    <string name="only_refl">Рефлективные</string>
    <string name="only_imp">Императивные</string>
    <string name="only_asp">Аспектно-ориентированные</string>
    <string name="only_sobit">Событийно-ориентированные</string>
    <string name="only_sten">Сценарные</string>
    <string name="only_refl_or">Рефлексивно-ориентированные</string>

</resources>
